--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+     <!-- Cookie Consent -->
+     <div class="cookie-consent" id="cookieConsent">
+        <div class="cookie-content">
+            <p>Bu web sitesi, size en iyi deneyimi sunmak için çerezleri kullanmaktadır. Sitemizi kullanmaya devam ederek, çerez kullanımımızı kabul etmiş olursunuz.</p>
+            <div class="cookie-buttons">
+                <a href="privacy-policy.html" class="cookie-link">Daha Fazla Bilgi</a>
+                <button class="cookie-accept" id="cookieAccept">Kabul Et</button>
+            </div>
+        </div>
+    </div>
     <nav class="navbar">
         <div class="logo">
             <div class="coffee-bean">
