--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artisan Kahve Evi</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-     <!-- Cookie Consent -->
-     <div class="cookie-consent" id="cookieConsent">
+    <!-- Cookie Consent -->
+    <div class="cookie-consent" id="cookieConsent">
         <div class="cookie-content">
-            <p>Bu web sitesi, size en iyi deneyimi sunmak için çerezleri kullanmaktadır. Sitemizi kullanmaya devam ederek, çerez kullanımımızı kabul etmiş olursunuz.</p>
+            <p>Bu web sitesi, size en iyi deneyimi sunmak için çerezleri kullanmaktadır. Sitemizi kullanmaya devam
+                ederek, çerez kullanımımızı kabul etmiş olursunuz.</p>
             <div class="cookie-buttons">
                 <a href="privacy-policy.html" class="cookie-link">Daha Fazla Bilgi</a>
                 <button class="cookie-accept" id="cookieAccept">Kabul Et</button>
@@ -60,7 +65,8 @@
         <div class="featured-grid">
             <div class="featured-item" data-aos="fade-up">
                 <div class="featured-image beans">
-                    <img src="https://images.unsplash.com/photo-1450024529642-858b23834369?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGhvdCUyMGJldmVyYWdlfGVufDB8fDB8fHww" alt="">
+                    <img src="https://images.unsplash.com/photo-1450024529642-858b23834369?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGhvdCUyMGJldmVyYWdlfGVufDB8fDB8fHww"
+                        alt="">
                 </div>
                 <h3>Özel Kahve Çekirdekleri</h3>
                 <p>Etiyopya Yirgacheffe</p>
@@ -68,7 +74,8 @@
             </div>
             <div class="featured-item" data-aos="fade-up" data-aos-delay="100">
                 <div class="featured-image equipment">
-                    <img src="https://images.unsplash.com/photo-1565428498507-6938cf6ff3ed?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjN8fGhvdCUyMGJldmVyYWdlfGVufDB8fDB8fHww" alt="">
+                    <img src="https://images.unsplash.com/photo-1565428498507-6938cf6ff3ed?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjN8fGhvdCUyMGJldmVyYWdlfGVufDB8fDB8fHww"
+                        alt="">
                 </div>
                 <h3>Demleme Ekipmanları</h3>
                 <p>Chemex Pour Over</p>
@@ -76,7 +83,8 @@
             </div>
             <div class="featured-item" data-aos="fade-up" data-aos-delay="200">
                 <div class="featured-image subscription">
-                    <img src="https://images.unsplash.com/photo-1561394026-0f29a9f0829c?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzJ8fGhvdCUyMGJldmVyYWdlfGVufDB8fDB8fHww" alt="">
+                    <img src="https://images.unsplash.com/photo-1561394026-0f29a9f0829c?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzJ8fGhvdCUyMGJldmVyYWdlfGVufDB8fDB8fHww"
+                        alt="">
                 </div>
                 <h3>Kahve Aboneliği</h3>
                 <p>Aylık Özel Seçim</p>
@@ -121,22 +129,28 @@
         <h2>Kahve Anları</h2>
         <div class="gallery-grid">
             <div class="gallery-item" data-aos="zoom-in">
-                <img src="https://images.unsplash.com/photo-1680853413523-65c7d70944ec?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8JUMzJTk2emVsJTIwS2FodmUlMjAlQzMlODdla2lyZGVrbGVyaXxlbnwwfHwwfHx8MA%3D%3D" alt="Kahve Sanatı" />
+                <img src="https://images.unsplash.com/photo-1680853413523-65c7d70944ec?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8JUMzJTk2emVsJTIwS2FodmUlMjAlQzMlODdla2lyZGVrbGVyaXxlbnwwfHwwfHx8MA%3D%3D"
+                    alt="Kahve Sanatı" />
             </div>
             <div class="gallery-item" data-aos="zoom-in" data-aos-delay="100">
-                <img src="https://images.unsplash.com/photo-1645262458871-ef8d517745ca?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fCVDMyU5NnplbCUyMEthaHZlJTIwJUMzJTg3ZWtpcmRla2xlcml8ZW58MHx8MHx8fDA%3D" alt="Kahve Dükkanı" />
+                <img src="https://images.unsplash.com/photo-1645262458871-ef8d517745ca?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fCVDMyU5NnplbCUyMEthaHZlJTIwJUMzJTg3ZWtpcmRla2xlcml8ZW58MHx8MHx8fDA%3D"
+                    alt="Kahve Dükkanı" />
             </div>
             <div class="gallery-item" data-aos="zoom-in" data-aos-delay="200">
-                <img src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Y29mZmVlfGVufDB8fDB8fHww" alt="Kahve Çekirdekleri" />
+                <img src="https://plus.unsplash.com/premium_photo-1674327105074-46dd8319164b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Y29mZmVlfGVufDB8fDB8fHww"
+                    alt="Kahve Çekirdekleri" />
             </div>
             <div class="gallery-item" data-aos="zoom-in" data-aos-delay="300">
-                <img src="https://images.unsplash.com/photo-1608735484559-50aa06c9478c?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8aG90JTIwYmV2ZXJhZ2V8ZW58MHx8MHx8fDA%3D" alt="Kahve Demleme" />
+                <img src="https://images.unsplash.com/photo-1608735484559-50aa06c9478c?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8aG90JTIwYmV2ZXJhZ2V8ZW58MHx8MHx8fDA%3D"
+                    alt="Kahve Demleme" />
             </div>
             <div class="gallery-item" data-aos="zoom-in" data-aos-delay="300">
-                <img src="https://images.unsplash.com/photo-1481391032119-d89fee407e44?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzF8fGhvdCUyMGJldmVyYWdlfGVufDB8fDB8fHww" alt="Kahve Demleme" />
+                <img src="https://images.unsplash.com/photo-1481391032119-d89fee407e44?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzF8fGhvdCUyMGJldmVyYWdlfGVufDB8fDB8fHww"
+                    alt="Kahve Demleme" />
             </div>
             <div class="gallery-item" data-aos="zoom-in" data-aos-delay="300">
-                <img src="https://plus.unsplash.com/premium_photo-1695945388510-b736e711c331?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzN8fGhvdCUyMGJldmVyYWdlfGVufDB8fDB8fHww" alt="Kahve Demleme" />
+                <img src="https://plus.unsplash.com/premium_photo-1695945388510-b736e711c331?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzN8fGhvdCUyMGJldmVyYWdlfGVufDB8fDB8fHww"
+                    alt="Kahve Demleme" />
             </div>
         </div>
     </section>
@@ -162,7 +176,8 @@
     <section id="story" class="story">
         <div class="story-content">
             <h2>Hikayemiz</h2>
-            <p>2024 yılında kurulduğumuz günden beri, en kaliteli kahve çekirdeklerini seçip mükemmel fincanı yaratmaya kendimizi adadık. Her içecek, kahve sanatının bir kutlamasıdır.</p>
+            <p>2024 yılında kurulduğumuz günden beri, en kaliteli kahve çekirdeklerini seçip mükemmel fincanı yaratmaya
+                kendimizi adadık. Her içecek, kahve sanatının bir kutlamasıdır.</p>
         </div>
         <div class="coffee-journey">
             <div class="journey-step" data-aos="fade-right">
@@ -234,12 +249,19 @@
                     <p>Kahve Sokak No:123<br>İstanbul, 34000</p>
                 </div>
             </div>
+
             <div class="footer-bottom">
                 <p>&copy; 2025 Artisan Kahve Evi. Tüm hakları saklıdır.</p>
+                <p>
+                    <a href="privacy-policy.html">Gizlilik Politikası</a> |
+                    <a href="cookie-policy.html">Çerez Politikası</a>
+                </p>
+                </p>
             </div>
         </div>
     </footer>
 
     <script src="js/main.js"></script>
 </body>
+
 </html>
