--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -208,6 +208,11 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Artisan Kahve Evi. Tüm hakları saklıdır.</p>
+                <p>
+                    <a href="privacy-policy.html">Gizlilik Politikası</a> |
+                    <a href="cookie-policy.html">Çerez Politikası</a>
+                </p>
+                </p>
             </div>
         </div>
     </footer>
