--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -97,12 +97,12 @@
                     <span>Artisan</span>
                 </div>
                 <div class="nav-links">
-                    <a href="#home">Ana Sayfa</a>
-                    <a href="#featured">Öne Çıkanlar</a>
-                    <a href="#menu">Menü</a>
-                    <a href="#gallery">Galeri</a>
-                    <a href="#story">Hikayemiz</a>
-                    <a href="#contact">İletişim</a>
+                    <a href="index.html#home">Ana Sayfa</a>
+                    <a href="index.html#featured">Öne Çıkanlar</a>
+                    <a href="index.html#menu">Menü</a>
+                    <a href="index.html#gallery">Galeri</a>
+                    <a href="index.html#story">Hikayemiz</a>
+                    <a href="index.html#contact">İletişim</a>
                 </div>
                 <div class="mobile-menu-btn">
                     <span></span>
